--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
 		baseCost: { materials: 200, tech: 50 },
 		costMultiplier: 1.5,      // 每升級一次，成本乘以1.5
 		baseEffect: { capacity: 10, explorationBoost: 0.05 },
-		effectMultiplier: 1.02,    // 每升級一次，效果乘以1.2
+		effectMultiplier: 1.2,    // 每升級一次，效果乘以1.2
 		getUpgradeInfo: function(currentLevel) {
 		  // currentLevel 代表目標升級後的等級
 		  return {
@@ -1206,10 +1206,10 @@
 		name: '僵尸兵營',
 		baseCost: { food: 300, materials: 200 },
 		costMultiplier: 1.5,
-		baseEffect: { production: 1 },
+		baseEffect: { production: 2 },
 		// 新增：1级时每秒消耗武器资源比例 (例如 0.05)
 		baseWeaponConsumptionRate: 0.05,
-		effectMultiplier: 1.02,
+		effectMultiplier: 1.2,
 		getUpgradeInfo: function(currentLevel) {
 		  const center = gameState.buildings.find(b => b && b.type === "center");
 		  const centerLevel = center ? center.level : 1;
@@ -1235,7 +1235,7 @@
 		baseCost: { materials: 100, tech: 50 },
 		costMultiplier: 1.5,
 		baseEffect: { food: 0.1 },
-		effectMultiplier: 1.02,
+		effectMultiplier: 1.2,
 		getUpgradeInfo: function(currentLevel) {
 		  const center = gameState.buildings.find(b => b && b.type === "center");
 		  const centerLevel = center ? center.level : 1;
@@ -1256,7 +1256,7 @@
 	    baseCost: { materials: 150, tech: 50 }, // 與溫室大棚相似的成本
 	    costMultiplier: 1.5,                   // 每次升級成本乘以1.5
 	    baseEffect: { materials: 0.1 },         // 初始效果：為材料產量加成10%
-	    effectMultiplier: 1.02,                 // 每升級一次效果乘以1.2
+	    effectMultiplier: 1.2,                 // 每升級一次效果乘以1.2
 	    getUpgradeInfo: function(currentLevel) {
 		  // 取得中心基地的等級，作為其他建築升級上限的參考
 		  const center = gameState.buildings.find(b => b && b.type === "center");
@@ -1281,7 +1281,7 @@
 		baseCost: { materials: 100, weapons: 150 },
 		costMultiplier: 1.5,
 		baseEffect: { weapons: 0.15 },
-		effectMultiplier: 1.02,
+		effectMultiplier: 1.2,
 		getUpgradeInfo: function(currentLevel) {
 		  const center = gameState.buildings.find(b => b && b.type === "center");
 		  const centerLevel = center ? center.level : 1;
@@ -1303,7 +1303,7 @@
 		baseCost: { materials: 200, tech: 100 },
 		costMultiplier: 1.5,
 		baseEffect: { tech: 0.2 },
-		effectMultiplier: 1.02,
+		effectMultiplier: 1.2,
 		getUpgradeInfo: function(currentLevel) {
 		  const center = gameState.buildings.find(b => b && b.type === "center");
 		  const centerLevel = center ? center.level : 1;
@@ -1326,7 +1326,7 @@
 		baseCost: { materials: 250, tech: 75, weapons: 250 },
 		costMultiplier: 1.6,
 		baseEffect: { resourceBonus: 0.05 },  // 初始 +5%
-		effectMultiplier: 1.02,
+		effectMultiplier: 1.2,
 		getUpgradeInfo: function(currentLevel) {
 		  // 對於這類建築，可以不受中心基地等級的限制（或另外設定限制）
 		  return {
@@ -1380,7 +1380,7 @@
 		baseCost: { tech: 500, materials: 150 },
 		costMultiplier: 1.55,
 		baseEffect: { rareChanceBoost: 0.05 },  // 初始 +5%
-		effectMultiplier: 1.02,
+		effectMultiplier: 1.2,
 		getUpgradeInfo: function(currentLevel) {
 		  const center = gameState.buildings.find(b => b && b.type === "center");
 		  const centerLevel = center ? center.level : 1;
@@ -1403,7 +1403,7 @@
 		baseCost: { weapons: 350, materials: 150 },
 		costMultiplier: 1.7,
 		baseEffect: { productionBonus: 0.1, weaponConsumptionRate: 0.02 },
-		effectMultiplier: 1.02,
+		effectMultiplier: 1.2,
 		getUpgradeInfo: function(currentLevel) {
 		  const center = gameState.buildings.find(b => b && b.type === "center");
 		  const centerLevel = center ? center.level : 1;
@@ -1713,7 +1713,7 @@
         gameState.allocations.farming += toFarming;
         gameState.allocations.recycling += toRecycling;
         gameState.allocations.research += toResearch;
-        addEventLog(`兵營生產：新增 ${gained} 僵尸，探索保留 ${toExploration}, 種植+${toFarming}, 回收+${toRecycling}, 科研+${toResearch}`, 'uncommon');
+        addEventLog(`兵營生產：新增 ${gained} 僵尸，探索+ ${toExploration}, 種植+${toFarming}, 回收+${toRecycling}, 科研+${toResearch}`, 'uncommon', 'zombie');
       }
       updateResourceDisplays();
     }
@@ -1778,8 +1778,10 @@
     function produceResources(dept, resource, baseRate) {
       const count = gameState.allocations[dept];
       if (count <= 0) return;
-      const multiplier = Math.pow(1.0005, count);
-      const computed = baseRate * multiplier * gameState.efficiency[resource];
+      const baseMultiplier = Math.pow(count, 0.85);
+	  const bonusMultiplier = Math.pow(1.0005, count);
+	  const effectiveMultiplier = baseMultiplier * bonusMultiplier;
+      const computed = baseRate * effectiveMultiplier * gameState.efficiency[resource];
       const amount = convertProduction(computed);
       if (Math.random() < 0.05) {
         const modifier = getRandomModifier(resource);
@@ -1915,12 +1917,12 @@
 
     /***** 食物消耗與僵尸損失 *****/
     function updateFoodConsumption() {
-      let foodNeeded = Math.floor(gameState.totalZombies * 0.6);
+      let foodNeeded = Math.floor(gameState.totalZombies * 3);
       if (foodNeeded > 0 && gameState.resources.food >= foodNeeded) {
         gameState.resources.food -= foodNeeded;
         addEventLog(`消耗食物：${foodNeeded}`, 'common');
       } else if (gameState.resources.food <= 0) {
-        let removeNum = Math.ceil(gameState.totalZombies * 0.2);
+        let removeNum = Math.ceil(gameState.totalZombies * 1);
         if (removeNum < 1) removeNum = 1;
         let priorities = ['exploration', 'research', 'recycling', 'farming'];
         for (let dept of priorities) {
@@ -2756,7 +2758,7 @@
 		
 		function gameLoop() {
 		  // 資源生產、僵尸生產、食物消耗、探索等操作集中執行
-		  produceResources('farming', 'food', 1.5 * 5);
+		  produceResources('farming', 'food', 1.7 * 5);
 		  produceResources('recycling', 'materials', 0.5 * 5);
 		  produceResources('research', 'tech', 0.2 * 5);
 		  produceZombies();
